<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/tool"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_help"
        android:text="@string/instructions_for_how_to_use_roadway_image_capture_application_click_to_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewAnimator
        android:id="@+id/viewPager"
        android:layout_width="409dp"
        android:layout_height="694dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/permissionpg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_firstallow" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/permissionpg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_secondallow" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/homepage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_relaunch" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_settings" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/camerareturn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_camerareturn" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="421dp"
            android:layout_height="821dp"
            android:baselineAlignBottom="@bool/default_circle_indicator_centered"
            android:contentDescription="@string/blankpage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </ViewAnimator>

    <TextView
        android:id="@+id/textNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="315dp"
        android:layout_marginLeft="315dp"
        android:layout_marginTop="275dp"
        android:textSize="36dp"
        android:text="@string/next"
        app:layout_constraintEnd_toStartOf="@+id/text_help"
        app:layout_constraintStart_toEndOf="@+id/viewPager"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="315dp"
        android:layout_marginRight="315dp"
        android:textSize="36dp"
        android:text="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/text_help"
        app:layout_constraintStart_toEndOf="@+id/viewPager"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nxt_button"
        android:layout_width="200dp"
        android:layout_height="535dp"
        android:layout_marginBottom="65dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorLightGrey"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prv_button"
        android:layout_width="200dp"
        android:layout_height="535dp"
        android:layout_marginBottom="65dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorLightGrey"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>